syntax = "proto3";

package raydium;

message RaydiumBlockEvents {
    repeated RaydiumTransactionEvents transactions = 1;
}

message RaydiumTransactionEvents {
    string signature = 1;
    repeated RaydiumEvent events = 2;
}

message RaydiumEvent {
    oneof event {
        InitializeEvent initialize = 1;
        DepositEvent deposit = 2;
        WithdrawEvent withdraw = 3;
        SwapEvent swap = 4;
    }
}

message InitializeEvent {
    string amm = 1;
    string user = 2;
    uint64 pcInitAmount = 3;
    uint64 coinInitAmount = 4;
    uint64 lpInitAmount = 5;
    string pcMint = 6;
    string coinMint = 7;
    string lpMint = 8;
    uint32 nonce = 9;
}

message DepositEvent {
    string amm = 1;
    string user = 2;
    uint64 pcAmount = 3;
    uint64 coinAmount = 4;
    uint64 lpAmount = 5;
    string pcMint = 6;
    string coinMint = 7;
    string lpMint = 8;
}

message WithdrawEvent {
    string amm = 1;
    string user = 2;
    uint64 pcAmount = 3;
    uint64 coinAmount = 4;
    uint64 lpAmount = 5;
    string pcMint = 6;
    string coinMint = 7;
    string lpMint = 8;
}

message SwapEvent {
    string amm = 1;
    string user = 2;
    string mintIn = 3;
    string mintOut = 4;
    uint64 amountIn = 5;
    uint64 amountOut = 6;
}
